2007-03-23  Sven Schuetz <sven@de.ibm.com>

	* sfcBroker.c, cimslp.c:
	Fixed 1689953: slp agent lacks proper signal handling

2007-03-23  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* cimXmlParser.c, cimXmlRequest.c: 
	Fixed 1686696: sfcb XML parsing failures not indicated to client
	Removed exit() in yyerror, generate (i)methodresponse errors
	for XML parsing errors.

2007-03-23  Sven Schuetz

	* value.c, queryOperation.h, objectpath.c, instance.c,
	queryOperation.c, objectpath.h, instance.h, Makefile.am:
	Fixed 1686170:instance comparision in queries do not work as expected

2007-03-20  Sven Schuetz

	* queryParser.y, selectexp.c:
	2nd fix for 1674999: fixed memory corruption and leak in query statement.

2007-03-16  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* args.c, array.c, context.c, instance.c, native.h, objectpath.c,
	value.c:
	Fixed 1682388: sfcb too picky about CMPIValue * alignment.
	The places were CMPIValues are copied now use a common function which
	ensures that the data copies are performed in an aligned way.

2007-03-16  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* indCIMXMLExport.c: 
	Fixed 1682045: compile failure with gcc 4.1.3

	* providerMgr.c: 
	Fixed 1677195: crash in provider manager trace on x86_64.

	* cimcClientSfcbLocal.c, constClass.c, constClass.h, instance.c: 
	Implemented 1443861: support for local clients.
	It was necessary to implement invokeMethod and
	cleanup the cimcClientSfcbLocal.c file. Further, the function table
	of constClass needed to be adjusted and some qualifier related
	functions needed to be implemented.
	As the instance function table was incompatible with the cimc
	definition, it needs to be switched during run time.

2007-03-09  Sven Schuetz

	* cimXmlOps.y:
	Fixed 1677445: Problems with instance references as method parameter

2007-03-09  Chris Buccella  

	* httpAdapter.c, configure.ac, README
	Fixed 1672704: IPv6 support.  This is a configure option.